# DirANN

./: .gitignore  CMakeLists.txt  README.md
include/: aligned_file_reader.h  aux_utils.h  concurrent_queue.h  distance.h  global_stats.h  index.h  linux_aligned_file_reader.h  math_utils.h  neighbor.h  parameters.h  partition_and_pq.h  percentile_stats.h  pq_table.h  query_buf.h  ssd_index.h  ssd_index_defs.h  timer.h  utils.h
include/buffer/: BlockCache.hpp  Serializer.hpp
include/libcuckoo/: cuckoohash_map.hh
include/nbr/: abstract_nbr.h  lvq_nbr.h
include/nbr/rabitq/utils/: warmup_space.hpp
include/utils/: percentile_stats.h
include/v2/: DynGraphDisk.hpp  DynGraphDisk_lg.hpp  dynamic_index.h  lock_table.h
include/v3/: coord_buffer.h  global_stats.h  numa_thread_pool.h  unaligned_file_reader.h
scripts/: build_index.sh  config.sh  overall.sh  preprocess.sh  run_exp1.sh  run_exp2.sh  run_exp3.sh  run_exp4.sh
src/: CMakeLists.txt  global_stats.cpp  index.cpp  ssd_index.cpp
src/buffer/: BlockCache.cpp  Serializer.cpp
src/search/: beam_search.cpp  coro_search.cpp  page_search.cpp  pipe_search.cpp  rerank_search.cpp
src/update/: consolidate_deletes_dirann.cpp  delete_merge.cpp  direct_insert.cpp  direct_insert_pmemann.cpp  dynamic_index.cpp  trigger_deletion.cpp  trigger_deletion2.cpp  trigger_deletion3.cpp  trigger_deletion4.cpp  trigger_deletion5.cpp
src/utils/: aux_utils.cpp  distance.cpp  global_stats.cpp  linux_aligned_file_reader.cpp  math_utils.cpp  partition.cpp  partition_and_pq.cpp  prune_neighbors.cpp  utils.cpp
tests/: CMakeLists.txt  build_disk_index.cpp  build_memory_index.cpp  change_pts.cpp  check_reorder_topo.cpp  convert_bin.cpp  create_reverse_graph.cpp  gen_tags.cpp  gt_update.cpp  mixed_workload.cpp  normalize_data.cpp  overall_perf_mem.cpp  overall_performance.cpp  pad_partition.cpp  reorder_by_map.cpp  reorder_topo.cpp  search_disk_index.cpp  search_disk_index_mem.cpp  search_memory_index.cpp  shuffle.cpp  shuffle2.cpp  shuffle3.py  split_and_merge.cpp  split_index.cpp  test_insert_search.cpp
tests/utils/: check_disk_index_connectivity.cpp  check_graph_connectivity.cpp  compute_groundtruth.cpp  shuffle_fbin.cpp
